--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
-# Mac
-.DS_Store
+# Gradle files
+.gradle/
+build/
 
-# Vim
-*.swp
+# Local configuration file (sdk path, etc)
+local.properties
 
-**/.idea
+# Log/OS Files
+*.log
 
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+api_key.txt
+# Android Profiling
+*.hprof
